Final homepage responsive changes and color scheme changes site wide

--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <h2 class="contact-heading">Get In Touch</h2>
-                
+                <hr style="width:10%; border-top:5px solid #232929;">
                 <p class="contact-paragraph">
 Looking to get your company online? Want to bring your business to the next level with an online store? Or just have a great idea that you need to tell the world about?! Get in touch with us and let us help you make that happen! </p>
             </div>
@@ -118,7 +118,7 @@ Looking to get your company online? Want to bring your business to the next leve
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6 col-xs-12 contact-form">
-                <h2>Send us an Email!</h2>
+                <h3 style="font-size:36px; font-family: 'open sans'; margin-bottom:55px;">Send us an Email!</h3>
                 <form id="contact" method="post" action="">
                     <div class="form-group">
                         <label for="name" id="label-header">Name:</label>
@@ -140,7 +140,7 @@ Looking to get your company online? Want to bring your business to the next leve
                 </form>
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12 contact-text">
-                <h2>Connect with us - We'd love to hear from you!</h2>
+                <h3 style="font-size:36px; font-family: 'open sans'; margin-left:50px;">Connect with us - We'd love to hear from you!</h3>
                 <p>We are a friendly bunch at Velabri so we'd really like to hear from you. If you have a question or need help in any way. fell free to get in touch and we'll reply within 24 hours. </p>
                 <h5>Find us on Social:</h5>
                 <div class="row">
