--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="services-header">
         <h2>Our Services</h2>
         <hr style="width:10%; border-top:5px solid #232929;">
-        <p class="services-paragraph">Take a look at some of the web services that we are proud to provide. If you have a specific project in mind and think one of our services can help you, get in touch with us and we'll make your vision come to life! </p>
+        <p class="services-paragraph">Take a look at some of the Web Services that we are proud to provide. If you have a specific project in mind and think one of our services can help you, get in touch with us and we'll make your vision come to life! </p>
     </div>
     <div class="services">
         <div class="container">
@@ -129,7 +129,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <img src="http://i67.tinypic.com/2yyp9tu.jpg" height="80px" width="80px">
+                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/2yyp9tu.jpg" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Website Design</h3>
@@ -139,7 +139,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <img src="http://i67.tinypic.com/dcvgox.jpg" height="80px" width="80px">
+                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/dcvgox.jpg" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Responsive Website Design</h3>
@@ -149,7 +149,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <img src="http://i63.tinypic.com/2cejd68.jpg" height="80px" width="80px">
+                            <a href="velabri_services.html"><img src="http://i63.tinypic.com/2cejd68.jpg" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Website Redesign</h3>
@@ -161,7 +161,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <img src="http://i68.tinypic.com/20iuark.jpg" height="80px" width="80px">
+                            <a href="velabri_services.html"><img src="http://i68.tinypic.com/20iuark.jpg" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Software Development</h3>
@@ -171,7 +171,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <img src="http://i66.tinypic.com/aewajc.png" height="80px" width="80px">
+                            <a href="velabri_services.html"><img src="http://i66.tinypic.com/aewajc.png" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>eCommerce Solutions & CMS</h3>
@@ -181,7 +181,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <img src="http://i63.tinypic.com/9tznza.jpg" height="80px" width="80px">
+                            <a href="velabri_services.html"><img src="http://i63.tinypic.com/9tznza.jpg" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Search Engine Optimization</h3>
