--- a/about_velabri.html
+++ b/about_velabri.html
@@ -100,6 +100,7 @@
             <div class="row">
                 <div class="col lg-6 col-md-6 col-sm-6 about-text">
                     <h5 class="about-text-header">Who Are We?</h5>
+                    <hr style="width:20%; border-top:5px solid #232929; text-align: left;">
                     <p>We are a Web Design and Development company based in Listowel, Co.Kerry. Our Journey began in 2011 when we built our first online business Primovisto which is still in operation today. Through our work with Primovisto we became more and more involved in web design and development and that involvement lead to us setting up Velabri in 2013.
                         <br>
                         <br>Over the past 4 years we have honed our craft and improved our skills in a number of web based languages such as HTML, CSS, Javascript and Python.
