Improved Homepage Footer Margin

--- a/velabri_services.html
+++ b/velabri_services.html
@@ -179,7 +179,7 @@
         </div>
     </div>
 </div>
-<div class="container">
+<div class="container service-details">
         <div class="row row-margin">
 
             <div class="col-md-1">
