--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="col-lg-2 col-md-3 col-sm-4">
                     <div class="logo">
                         <a href="index.html">
-                            <img class="light-logo hidden-xs" src="http://i64.tinypic.com/1567rqw.png" height="52px" width="170px">
-                            <img class="dark-logo hidden-xs" src="http://i67.tinypic.com/2cfpqnk.png" height="52px" width="170px">
+                            <img class="light-logo hidden-xs" src="http://i64.tinypic.com/1567rqw.png" alt="Velabri Logo Light" height="52px" width="170px">
+                            <img class="dark-logo hidden-xs" src="http://i67.tinypic.com/2cfpqnk.png" alt="Velabri Logo Dark" height="52px" width="170px">
                         </a>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/2yyp9tu.jpg" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/2yyp9tu.jpg" alt="Velabri Web Services"height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Website Design</h3>
@@ -138,7 +138,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/dcvgox.jpg" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/dcvgox.jpg" alt="Velabri Responsive Website Design" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Responsive Website Design</h3>
@@ -148,7 +148,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i63.tinypic.com/2cejd68.jpg" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i63.tinypic.com/2cejd68.jpg" alt="Velabri  Website Design" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Website Redesign</h3>
@@ -160,7 +160,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i68.tinypic.com/20iuark.jpg" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i68.tinypic.com/20iuark.jpg" alt="Velabri software development" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Software Development</h3>
@@ -170,7 +170,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i66.tinypic.com/aewajc.png" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i66.tinypic.com/aewajc.png" alt="Velabri eCommerce Website" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>eCommerce Solutions & CMS</h3>
@@ -180,7 +180,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i63.tinypic.com/9tznza.jpg" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i63.tinypic.com/9tznza.jpg" alt="Velabri SEO" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Search Engine Optimization</h3>
@@ -241,7 +241,7 @@
                 <div class="col-md-4 hidden-xs hidden-sm text-center">
                     <div class="why-choose-image">
                         <div class="why-choose-image">
-                            <a href="#"><img src="http://i64.tinypic.com/2utt8gw.png" height="400px" width="250px" style="margin-top:80px;" /></a>
+                            <a href="#"><img src="http://i64.tinypic.com/2utt8gw.png" alt="why choose Velabri for web design"height="400px" width="250px" style="margin-top:80px;" /></a>
                         </div>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding">
                         <div class="portfolio-image">
-                            <a href="www.rokcycleshop.com"><img src="http://i66.tinypic.com/103heuv.jpg" class="image img-responsive">
+                            <a href="www.rokcycleshop.com"><img src="http://i66.tinypic.com/103heuv.jpg" alt="Ring of Kerry Cycle Store" class="image img-responsive">
                             </a>
                         </div>
                         <p class="portfolio-website">www.rokcycleshop.com</p>
@@ -318,7 +318,7 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-1">
                         <div class="portfolio-image">
-                            <a href="www.primovisto.com"><img src="http://i65.tinypic.com/2na2ryo.jpg" class="image img-responsive">
+                            <a href="www.primovisto.com"><img src="http://i65.tinypic.com/2na2ryo.jpg" alt="Primovisto Bamboo iPhone and iPad Cases" class="image img-responsive">
                             </a>
                         </div>
                         <p class="portfolio-website">www.primovisto.com</p>
@@ -326,7 +326,7 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-2">
                         <div class="portfolio-image">
-                            <a href="#"><img src="http://i67.tinypic.com/104raqv.jpg" class="image img-responsive">
+                            <a href="#"><img src="http://i67.tinypic.com/104raqv.jpg" alt="Child of Haiti Charity Ireland" class="image img-responsive">
                             </a>
                         </div>
                         <p class="portfolio-website">www.childofhaiti.ie</p>
@@ -334,7 +334,7 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-3">
                         <div class="portfolio-image">
-                            <a href="www.telecomproperty.com"><img src="http://i67.tinypic.com/25qbwuq.jpg" class="image">
+                            <a href="www.telecomproperty.com"><img src="http://i67.tinypic.com/25qbwuq.jpg" alt="Telecom property Ireland" class="image">
                             </a>
                         </div>
                         <p class="portfolio-website">www.telecomproperty.com</p>
@@ -344,7 +344,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-top">
                         <div class="portfolio-image">
-                            <a href="www.rokcycleshop.com"><img src="http://i66.tinypic.com/103heuv.jpg" class="image">
+                            <a href="www.rokcycleshop.com"><img src="http://i66.tinypic.com/103heuv.jpg" alt="Ring of kerry cycle store" class="image">
                             </a>
                         </div>
                         <p class="portfolio-website">www.rokcycleshop.com</p>
@@ -352,7 +352,7 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-1">
                         <div class="portfolio-image">
-                            <a href="www.primovisto.com"><img src="http://i65.tinypic.com/2na2ryo.jpg" class="image">
+                            <a href="www.primovisto.com"><img src="http://i65.tinypic.com/2na2ryo.jpg" alt="Primovisto Bamboo iPhone and iPad Cases" class="image">
                             </a>
                         </div>
                         <p class="portfolio-website">www.primovisto.com</p>
@@ -360,7 +360,7 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-2">
                         <div class="portfolio-image">
-                            <a href="#"><img src="http://i67.tinypic.com/104raqv.jpg" class="image">
+                            <a href="#"><img src="http://i67.tinypic.com/104raqv.jpg" alt="Child of Haiti Charity Ireland" class="image">
                             </a>
                         </div>
                         <p class="portfolio-website">www.childofhaiti.ie</p>
@@ -368,7 +368,7 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-3">
                         <div class="portfolio-image">
-                            <a href="www.telecomproperty.com"><img src="http://i67.tinypic.com/25qbwuq.jpg" class="image">
+                            <a href="www.telecomproperty.com"><img src="http://i67.tinypic.com/25qbwuq.jpg" alt="Telecom Property" class="image">
                             </a>
                         </div>
                         <p class="portfolio-website">www.telecomproperty.com</p>
