More HTML validation improvements for homepage

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Monoton" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Open+Sans+Condensed:300|Roboto:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <title>Ed Stream 1 Project Website</title>
     <script>
@@ -128,7 +128,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/2yyp9tu.jpg" alt="Velabri Web Services"height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/2yyp9tu.jpg" alt="Velabri Web Services" height="80px" width="80px" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Website Design</h3>
@@ -219,7 +219,7 @@
                         <a href="index.html"><h5>24/7 Support.</h5></a>
                         <p>We understand that sometimes issues occur and you don't need to deal with them on your own. We're avalable 24/7 to help with any issue that may arise.</p>
                         <div class="simple-icon">
-                            <a href="#"><i class="fa fa-check"></i></a>
+                            <a href="velabri_get_quote.html"><i class="fa fa-check"></i></a>
                         </div>
                     </div>
                     <div class="why-choose why-choose-left">
@@ -227,39 +227,39 @@
                         <p>At Velabri, we'll bring your vision to life! Our creative team are focused on producing unique and user friendly experiences for your customers.
                         </p>
                         <div class="simple-icon">
-                            <a href="#"><i class="fa fa-check"></i></a>
+                            <a href="velabri_get_quote.html"><i class="fa fa-check"></i></a>
                         </div>
                     </div>
                     <div class="why-choose why-choose-left">
                         <a href="index.html"><h5>We are Passionate.</h5></a>
                         <p>We love what we do! Our aim is to enhance your business and we take great pride in doing so.</p>
                         <div class="simple-icon">
-                            <a href="#"><span><i class="fa fa-check"></i></span></a>
+                            <a href="velabri_get_quote.html"><span><i class="fa fa-check"></i></span></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 hidden-xs hidden-sm text-center">
                     <div class="why-choose-image">
                         <div class="why-choose-image">
-                            <a href="#"><img src="http://i64.tinypic.com/2utt8gw.png" alt="why choose Velabri for web design"height="400px" width="250px" style="margin-top:80px;" /></a>
+                            <a href="velabri_get_quote.html"><img src="http://i64.tinypic.com/2utt8gw.png" alt="why choose Velabri for web design" height="400px" width="250px" style="margin-top:80px;" /></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="why-choose why-choose-right">
-                        <a href="index.html"><h5>We Listen.</h5></a>
+                        <a href="velabri_get_quote.html"><h5>We Listen.</h5></a>
                         <p>At Velabri, we'll listen to you, do our best to understand and then reply with a clear and simple strategy for moving forward with your project.
                         </p>
                         <div class="simple-icon">
-                            <a href="#"><i class="fa fa-check"></i></a>
+                            <a href="velabri_get_quote.html"><i class="fa fa-check"></i></a>
                         </div>
                     </div>
                     <div class="why-choose why-choose-right">
-                        <a href="index.html"><h5>Experienced Team.</h5></a>
+                        <a href="velabri_get_quote.html"><h5>Experienced Team.</h5></a>
                         <p> Velabri has over 10 years of combined experience working with web design and development. Our team have the skills to complete your project.
                         </p>
                         <div class="simple-icon">
-                            <a href="#"><i class="fa fa-check"></i></a>
+                            <a href="velabri_get_quote.html"><i class="fa fa-check"></i></a>
                         </div>
                     </div>
                     <div class="why-choose why-choose-right">
@@ -267,7 +267,7 @@
                         <p>Our prices will be extremely competitive and that's a promise!
                         </p>
                         <div class="simple-icon">
-                            <a href="#"><span><i class="fa fa-check"></i></span></a>
+                            <a href="velabri_get_quote.html"><span><i class="fa fa-check"></i></span></a>
                         </div>
                     </div>
                 </div>
@@ -388,7 +388,7 @@
 
             </div>
         </div>
-    </div>
+    
     <!-- End Portfolio Section -->
     <!-- Skills Section -->
     <section class="our-skills" id="our_skills">
@@ -405,30 +405,30 @@
             <div class="skills-content">
                 <div class="row skilltypes-grid">
                     <div class="skills_logos col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <img class="skilltypes img-responsive" src="http://i68.tinypic.com/2coltgg.jpg">
+                        <img class="skilltypes img-responsive" alt="coding skills" src="http://i68.tinypic.com/2coltgg.jpg">
                     </div>
                     <div class="skills_logos col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <img class="skilltypes img-responsive" src="http://i64.tinypic.com/8ychty.png">
+                        <img class="skilltypes img-responsive" alt="coding skills" src="http://i64.tinypic.com/8ychty.png">
                     </div>
                     <div class="skills_logos col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <img class="skilltypes img-responsive" src="http://i67.tinypic.com/r7kmtl.png">
+                        <img class="skilltypes img-responsive" alt="coding skills" src="http://i67.tinypic.com/r7kmtl.png">
                     </div>
                     <div class="skills_logos col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <img class="skilltypes img-responsive" src="http://i66.tinypic.com/2mfixoy.png">
+                        <img class="skilltypes img-responsive" alt="coding skills" src="http://i66.tinypic.com/2mfixoy.png">
                     </div>
                 </div>
                 <div class="row skilltypes-grid">
                     <div class="skills_logos col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <img class="skilltypes img-responsive" src="http://i65.tinypic.com/2chp7oi.png">
+                        <img class="skilltypes img-responsive" alt="coding skills" src="http://i65.tinypic.com/2chp7oi.png">
                     </div>
                     <div class="skills_logos col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <img class="skilltypes img-responsive" src="http://i67.tinypic.com/2vty1xw.png">
+                        <img class="skilltypes img-responsive" alt="coding skills" src="http://i67.tinypic.com/2vty1xw.png">
                     </div>
                     <div class="skills_logos col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <img class="skilltypes img-responsive" src="http://i65.tinypic.com/akba0o.png">
+                        <img class="skilltypes img-responsive" alt="coding skills" src="http://i65.tinypic.com/akba0o.png">
                     </div>
                     <div class="skills_logos col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <img class="skilltypes img-responsive" src="http://i67.tinypic.com/2cpcmr9.jpg">
+                        <img class="skilltypes img-responsive" alt="coding skills" src="http://i67.tinypic.com/2cpcmr9.jpg">
                     </div>
                 </div>
             </div>
