--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="col-lg-2 col-md-3 col-sm-4">
                     <div class="logo">
                         <a href="index.html">
-                            <img class="light-logo hidden-xs" src="http://i64.tinypic.com/1567rqw.png" alt="Velabri Logo Light" height="52px" width="170px">
-                            <img class="dark-logo hidden-xs" src="http://i67.tinypic.com/2cfpqnk.png" alt="Velabri Logo Dark" height="52px" width="170px">
+                            <img class="light-logo hidden-xs" src="http://i64.tinypic.com/1567rqw.png" alt="Velabri Logo Light" height="52" width="170">
+                            <img class="dark-logo hidden-xs" src="http://i67.tinypic.com/2cfpqnk.png" alt="Velabri Logo Dark" height="52" width="170">
                         </a>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="mobile-logo">
-                        <a href="#"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80px" width="240px"></a>
+                        <a href="#"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80" width="240"></a>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/2yyp9tu.jpg" alt="Velabri Web Services" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/2yyp9tu.jpg" alt="Velabri Web Services" height="80" width="80" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Website Design</h3>
@@ -138,7 +138,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/dcvgox.jpg" alt="Velabri Responsive Website Design" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i67.tinypic.com/dcvgox.jpg" alt="Velabri Responsive Website Design" height="80" width="80" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Responsive Website Design</h3>
@@ -148,7 +148,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i63.tinypic.com/2cejd68.jpg" alt="Velabri  Website Design" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i63.tinypic.com/2cejd68.jpg" alt="Velabri  Website Design" height="80" width="80" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Website Redesign</h3>
@@ -160,7 +160,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i68.tinypic.com/20iuark.jpg" alt="Velabri software development" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i68.tinypic.com/20iuark.jpg" alt="Velabri software development" height="80" width="80" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Software Development</h3>
@@ -170,7 +170,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i66.tinypic.com/aewajc.png" alt="Velabri eCommerce Website" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i66.tinypic.com/aewajc.png" alt="Velabri eCommerce Website" height="80" width="80" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>eCommerce Solutions & CMS</h3>
@@ -180,7 +180,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
-                            <a href="velabri_services.html"><img src="http://i63.tinypic.com/9tznza.jpg" alt="Velabri SEO" height="80px" width="80px" class="img-icon"></a>
+                            <a href="velabri_services.html"><img src="http://i63.tinypic.com/9tznza.jpg" alt="Velabri SEO" height="80" width="80" class="img-icon"></a>
                         </div>
                         <div class="service-content">
                             <h3>Search Engine Optimization</h3>
@@ -241,7 +241,7 @@
                 <div class="col-md-4 hidden-xs hidden-sm text-center">
                     <div class="why-choose-image">
                         <div class="why-choose-image">
-                            <a href="velabri_get_quote.html"><img src="http://i64.tinypic.com/2utt8gw.png" alt="why choose Velabri for web design" height="400px" width="250px" style="margin-top:80px;" /></a>
+                            <a href="velabri_get_quote.html"><img src="http://i64.tinypic.com/2utt8gw.png" alt="why choose Velabri for web design" height="400" width="250" style="margin-top:80px;" /></a>
                         </div>
                     </div>
                 </div>
