Changed src location to homepage for Logo at Navbar

--- a/velabri_services.html
+++ b/velabri_services.html
@@ -136,7 +136,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="mobile-logo">
-                        <a href="#"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80px" width="240px"></a>
+                        <a href="index.html"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80px" width="240px"></a>
                     </div>
                 </div>
             </div>
@@ -145,7 +145,7 @@
     <nav class="navbar navbar-inverse visible-xs">
         <div class="container ">
             <div class="nav navbar-header">
-                <a class="navbar-brand" href="#" style="color:#32c4e9">Menu</a>
+                <a class="navbar-brand" href="index.html" style="color:#32c4e9">Menu</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myCollapsingList">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -172,7 +172,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <h2 class="services-heading">What We Do</h2>
-                <hr style="width:10%; border-top:5px solid #232929;">
+                <hr style="width:10%; border-top:5px solid #232929; text-align: center;">
                 
                 <p class="services-paragraph">Below is a list of the web services that Velabri offer. If you have any questions about any of our services don't hesitate to <a href="contact_velabri.html">contact us!</a></p>
             </div>
