--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="mobile-logo">
-                        <a href="#"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80" width="240"></a>
+                        <a href="index.html"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80" width="240"></a>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
     <nav class="navbar navbar-inverse visible-xs">
         <div class="container ">
             <div class="nav navbar-header">
-                <a class="navbar-brand" href="#" style="color:#32c4e9">Menu</a>
+                <a class="navbar-brand" href="index.html" style="color:#32c4e9">Menu</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myCollapsingList">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
