--- a/velabri_portfolio.html
+++ b/velabri_portfolio.html
@@ -43,7 +43,7 @@
                         <div class="menu-links">
                             <nav>
                                 <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="about_velabri.html">About</a></li>
                                     <li><a href="velabri_portfolio.html">Portfolio</a></li>
                                     <li><a href="velabri_services.html">Services</a></li>
@@ -62,7 +62,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="mobile-logo">
-                        <a href="#"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80px" width="240px"></a>
+                        <a href="index.html"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80" width="240"></a>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
     <nav class="navbar navbar-inverse visible-xs">
         <div class="container ">
             <div class="nav navbar-header">
-                <a class="navbar-brand" href="#" style="color:#32c4e9">Menu</a>
+                <a class="navbar-brand" href="index.html" style="color:#32c4e9">Menu</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myCollapsingList">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
