Trying to get Javascript to fire

--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@
     </div>
  </div>
 </footer>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://primovisto.github.io/Velabri-Ltd/script.js"></script>
     
 </body>
 
