--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!-- jumbotron-section -->
     <div class="jumbotron-section">
         <div class="jumbotron-content">
-            <h1>Experts in Web Design and Development</h1>
+            <h1>Experts in <span>Web Design</span> and <span>Development</span></h1>
             <p>Building Beautiful, Responsive Websites that Sell.</p>
             <ul>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
