--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -37,8 +37,8 @@
                 <div class="col-lg-2 col-md-3 col-sm-4">
                     <div class="logo">
                         <a href="index.html">
-                            <img class="light-logo hidden-xs" src="http://i67.tinypic.com/2568ql1.png" height="55px" width="120px">
-                            <img class="dark-logo hidden-xs" src="http://i67.tinypic.com/2cfpqnk.png" height="55px" width="120px">
+                            <img class="light-logo hidden-xs" src="http://i64.tinypic.com/1567rqw.png" alt="Velabri Logo Light" height="52" width="170">
+                            <img class="dark-logo hidden-xs" src="http://i68.tinypic.com/11c4f91.png" alt="Velabri Logo Dark" height="52" width="170">
                         </a>
                     </div>
                 </div>
@@ -96,10 +96,7 @@
     <!-- End Header -->
 
     <div class="jumbotron-section">
-        <div class="jumbotron-content">
-            <h1>Contact Velabri</h1>
-            <p></p>
-        </div>
+        
     </div>
 <div class="contact-us-page">
  <div class="contact-header">
