--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="logo">
                         <a href="index.html">
                             <img class="light-logo hidden-xs" src="http://i64.tinypic.com/1567rqw.png" alt="Velabri Logo Light" height="52" width="170">
-                            <img class="dark-logo hidden-xs" src="http://i67.tinypic.com/2cfpqnk.png" alt="Velabri Logo Dark" height="52" width="170">
+                            <img class="dark-logo hidden-xs" src="http://i68.tinypic.com/11c4f91.png" alt="Velabri Logo Dark" height="52" width="170">
                         </a>
                     </div>
                 </div>
