--- a/velabri_services.html
+++ b/velabri_services.html
@@ -36,8 +36,8 @@
                     <div class="col-lg-2 col-md-3 col-sm-4">
                         <div class="logo">
                             <a href="index.html">
-                                <img class="light-logo hidden-xs" src="http://i67.tinypic.com/2568ql1.png" height="55px" width="120px">
-                                <img class="dark-logo hidden-xs" src="http://i67.tinypic.com/2cfpqnk.png" height="55px" width="120px">
+                                <img class="light-logo hidden-xs" src="http://i64.tinypic.com/1567rqw.png" alt="Velabri Logo Light" height="52" width="170">
+                            <img class="dark-logo hidden-xs" src="http://i68.tinypic.com/11c4f91.png" alt="Velabri Logo Dark" height="52" width="170">
                             </a>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <h2 class="services-heading">What We Do</h2>
-                <hr style="width:10%; border-top:5px solid #232929; text-align: center;">
+                <hr style="width:10%; border-top:5px solid #232929;">
                 
                 <p class="services-paragraph">Below is a list of the web services that Velabri offer. If you have any questions about any of our services don't hesitate to <a href="contact_velabri.html">contact us!</a></p>
             </div>
