--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="mobile-logo">
-                        <a href="index.html"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80" width="240"></a>
+                        <a href="index.html"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80" width="240" style="max-width: 100%;"></a>
                     </div>
                 </div>
             </div>
