Fixed Border of social icons in jumbotron

--- a/about_velabri.html
+++ b/about_velabri.html
@@ -101,9 +101,9 @@
                         <br>
                         <br>Over the past 4 years we have honed our craft and improved our skills in a number of web based languages such as HTML, CSS, Javascript and Python.
                         <br>
-                        <br>Also through our work with Primovisto we have gained valuable experience and a genuine understanding of what of what it takes to make your business flourish online. A well designed and structured website will offer your business credibility and help you tostand out from the crowd.
+                        <br>Also through our work with Primovisto we have gained valuable experience and a genuine understanding of what of what it takes to make your business flourish online. A well designed and structured website will offer your business credibility and help you to stand out from the crowd.
                         <br>
-                        <br>Combining that solid base with a strong brand image and digital marketing campaign are keys to a successful online business. Velabri are here to achieve their goals. We'll listen closely to your thoughts and needs and will structure a plan accordingly. For us the customer always comes first and their satisfaction is vital to our business and theirs alike.</p>
+                        <br>Combining that solid base with a strong brand image and digital marketing campaign are keys to a successful online business. Velabri are here to help our customers achieve their goals. We'll listen closely to your needs and will structure a plan accordingly. For us the customer always comes first and their satisfaction is vital to our business and theirs alike.</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 about-image">
                     <img src="http://i63.tinypic.com/25swv9z.jpg" height="532" width="340" />
