Changes to Services Page Layout

--- a/about_velabri.html
+++ b/about_velabri.html
@@ -89,6 +89,10 @@
     </nav>
     <!-- Jumbotron Section-->
     <div class="jumbotron-section">
+    <div class="jumbotron-content">
+        <h1>About Velabri</h1>
+        <p>Get to know us a little better.</p>
+    </div>
         
     </div>
     <div class="about-us">
