--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -96,6 +96,10 @@
     <!-- End Header -->
 
     <div class="jumbotron-section">
+    <div class="jumbotron-content">
+        <h1>Contact Velabri</h1>
+        <p>All the info you'll need to get in touch with us is detailed below.</p>
+    </div>
         
     </div>
 <div class="contact-us-page">
