--- a/velabri_get_quote.html
+++ b/velabri_get_quote.html
@@ -88,15 +88,19 @@
         </div>
     </nav>
 <div class="jumbotron-section">
+<div class="jumbotron-content">
+    <h1>Get A Quote</h1>
+    <p></p>
+</div>
     
 </div>
  <div class="quote-header">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
-                <h2 class="quote-heading">Get a Free Quote</h2>
+                <h2 class="quote-heading">Looking to Complete a Web Project?</h2>
                 <hr style="width:10%; border-top:5px solid #232929;">
-                <p class="quote-paragraph">Tell Us About Your Web Project and We'll Get Back With a Quotation</p>
+                <p class="quote-paragraph">Have a project in mind but unsure about cost and timeframe? Don't worry, we'll quote you for free!</p>
             </div>
         </div>
     </div>
