--- a/velabri_portfolio.html
+++ b/velabri_portfolio.html
@@ -91,6 +91,7 @@
         <div class="jumbotron-section">
             <div class="jumbotron-content">
                 <h1>Our Portfolio</h1>
+                <p>At Velabri we take pride in every project we are involved with.</p>
             </div>
         </div>
         <div class="portfolio-welcome">
