--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <!-- End Responsive Header -->
     <!-- End Header -->
     <!-- jumbotron-section -->
-    <div class="jumbotron-section">
+    <div class="jumbotron-section" img-responsive>
+    
         <div class="jumbotron-content">
             <h1>Experts in <span>Web Design</span> and <span>Development</span></h1>
             <p>Building Beautiful, Responsive Websites that Sell.</p>
