--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -123,19 +123,19 @@ Looking to get your company online? Want to bring your business to the next leve
                 <form id="contact" method="post" action="">
                     <div class="form-group">
                         <label for="name" id="label-header">Name:</label>
-                        <input type="text" class="form-control" name="name" size="10" maxlength="40">
+                        <input type="text" class="form-control" name="name">
                     </div>
                     <div class="form-group">
-                        <label for="email" id="label-header">Number:</label>
-                        <input type="email" class="form-control" data-required="false" name="email" size="10" maxlength="40">
+                        <label for="number" id="label-header">Number:</label>
+                        <input type="number" class="form-control" data-required="false" name="phone number">
                     </div>
                     <div class="form-group">
                         <label for="email" id="label-header">Email:</label>
-                        <input type="email" class="form-control" data-required="false" name="email" size="10" maxlength="40">
+                        <input type="email" class="form-control" data-required="false" name="email">
                     </div>
                     <div class="form-group">
                         <label for="message" id="label-header">Message:</label>
-                        <textarea class="form-control" name="message" rows="3" cols="40"></textarea>
+                        <textarea class="form-control" name="message"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary contact-btn">Submit</button>
                 </form>
