Worked on Pages Jumbotron Sections

--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -92,6 +92,14 @@
     </nav>
     <!-- End Responsive Header -->
     <!-- End Header -->
+    <div class="jumbotron-section">
+        <div class="jumbotron-content">
+            <h2>Velabri <span> | </span> Contact Us</h2>
+
+        </div>
+        <div class="scroll-down"></div>
+           
+        </div>
     
     <div class="contact-us-page">
         <div class="contact-header">
