--- a/velabri_get_quote.html
+++ b/velabri_get_quote.html
@@ -88,17 +88,18 @@
         </div>
     </nav>
 <div class="jumbotron-section">
-<div class="jumbotron-content">
-    <h1>Get A Quote</h1>
-    <p></p>
-</div>
-    
-</div>
+        <div class="jumbotron-content">
+            <h2>Velabri <span> | </span> Get a Quote</h2>
+
+        </div>
+        <div class="scroll-down"></div>
+           
+        </div>
  <div class="quote-header">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
-                <h2 class="quote-heading">Get a Quick Quotation for your Project</h2>
+                <h2 class="quote-heading">Quote</h2>
                 <hr style="width:10%; border-top:5px solid #232929;">
                 <p class="quote-paragraph">Have a project in mind but unsure about cost and timeframe? Fill in the form below and we'll send you a quotation.</p>
             </div>
