--- a/about_velabri.html
+++ b/about_velabri.html
@@ -89,12 +89,13 @@
     </nav>
     <!-- Jumbotron Section-->
     <div class="jumbotron-section">
-    <div class="jumbotron-content">
-        <h1>About Velabri</h1>
-        <p>Get to know us a little better.</p>
-    </div>
-        
-    </div>
+        <div class="jumbotron-content">
+            <h2>Velabri <span> | </span> About Us</h2>
+
+        </div>
+        <div class="scroll-down"></div>
+           
+        </div>
     <div class="about-us">
         <div class="container">
             <div class="row">
