--- a/velabri_portfolio.html
+++ b/velabri_portfolio.html
@@ -89,18 +89,20 @@
         </div>
     </nav>
         <div class="jumbotron-section">
-            <div class="jumbotron-content">
-                <h1>Our Portfolio</h1>
-                <p>At Velabri we take pride in every project we are involved with.</p>
-            </div>
+        <div class="jumbotron-content">
+            <h2>Velabri <span> | </span> Our Portfolio</h2>
+
+        </div>
+        <div class="scroll-down"></div>
+           
         </div>
         <div class="portfolio-welcome">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 portfolio-page-header">
-                        <h2>Welcome to Velabri's Portfolio</h2>
+                        <h2>Welcome to the Velabri Portfolio</h2>
                         <hr style="width:10%; border-top:5px solid #232929;">
-                        <p>Check out some of the cool projects we've completed. We're proud to have been involved in helping to build these businesses!</p>
+                        <p>Check out some of the cool projects we've completed. We're proud to have been involved in helping to build these businesses! </p>
                     </div>
                 </div>
             </div>
