Added Content to services page

--- a/about_velabri.html
+++ b/about_velabri.html
@@ -110,8 +110,8 @@
                         <br>
                         <br>Combining that solid base with a strong brand image and digital marketing campaign are keys to a successful online business. Velabri are here to help our customers achieve their goals. We'll listen closely to your needs and will structure a plan accordingly. For us the customer always comes first and their satisfaction is vital to our business and theirs alike.</p>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 about-image">
-                    <img src="http://i63.tinypic.com/25swv9z.jpg" height="532" width="340" />
+                <div class="col-lg-6 col-md-6 col-sm-12 about-image">
+                    <img src="http://i64.tinypic.com/r757qc.jpg" height="860" width="680" class="img-responsive"/>
                 </div>
             </div>
         </div>
@@ -123,13 +123,13 @@
                     <h2>Meet the Team</h2>
                 </div>
                 <div class="col-md-4 team-image">
-                    <img class="img-responsive ed-team-image" src="http://i68.tinypic.com/28v8tb9.jpg">
+                    <img class=" ed-team-image" src="http://i68.tinypic.com/28v8tb9.jpg">
                     <p class="name">Edward Stack</p>
                     <p class="position">Co-Founder/Web Designer/Developer</p>
                     <p class="about-bio">Ed has 5 years of experience in web design and software development. He is the creative force behind Velabri and the team member with the most input into the day-to-day operations of the company. </p>
                 </div>
                 <div class="col-md-4 team-image">
-                    <img class="img-responsive james-team-image" src="http://i68.tinypic.com/2h52z3c.jpg" height="288px" width="288px">
+                    <img class=" james-team-image" src="http://i68.tinypic.com/2h52z3c.jpg" height="288px" width="288px">
                     <p class="name">James Stack</p>
                     <p class="position">Co-Founder</p>
                     <p class="about-bio">James has been involved with Velabri since it's inception in 2011 and was the architect behind it's creation. Nowadays he is involved more in a consultancy role giving advice and helping out whenever needed. </p>
